--- a/welcome.html
+++ b/welcome.html
@@ -126,6 +126,7 @@
   </div>
 
   <script>
+    // --- DOM Elements ---
     const authErrorMessage = document.getElementById('auth-error-message');
     const continueButton = document.getElementById('continueButton');
     const continueSection = document.getElementById('continue-section');
@@ -133,194 +134,110 @@
     const loginPrompt = document.getElementById('login-prompt');
     const googleButtonWrapper = document.getElementById('google-signin-button-wrapper');
 
-    function clearAuthError() {
-        if (authErrorMessage) {
-            authErrorMessage.textContent = '';
-            authErrorMessage.style.display = 'none';
-        }
-    }
+    // --- API Base URL ---
+    const API_BASE_URL = 'https://api.fireship.org'; // Use the live API
 
+    // --- Utilities ---
+    function clearAuthError() {
+        if (authErrorMessage) { authErrorMessage.textContent = ''; authErrorMessage.style.display = 'none'; }
+    }
     function showAuthError(message) {
          console.error("Auth Error:", message);
-         if (authErrorMessage) {
-             authErrorMessage.textContent = message;
-             authErrorMessage.style.display = 'block';
-         } else {
-             alert(message);
-         }
+         if (authErrorMessage) { authErrorMessage.textContent = message; authErrorMessage.style.display = 'block'; }
+         else { alert(message); }
     }
-
-    /**
-     * Utility function to make fetch requests and handle common errors.
-     */
-    // Add this line BEFORE the apiRequest function definition
-    const API_BASE_URL = 'https://api.fireship.org'; // <-- YOUR LIVE API URL
-
     async function apiRequest(url, options) {
-         // Construct the full URL if the provided URL starts with '/'
-         const fullUrl = url.startsWith('/') ? `${API_BASE_URL}${url}` : url; // Use the constant
-         console.debug(`API Req: ${options?.method || 'GET'} ${fullUrl}`); // Log the full URL
+         const fullUrl = url.startsWith('/') ? `${API_BASE_URL}${url}` : url;
+         console.debug(`API Req: ${options?.method || 'GET'} ${fullUrl}`);
          try {
-             // Use fullUrl in the fetch call
-             const r = await fetch(fullUrl, options); // <--- Ensure this uses fullUrl
-
+             const r = await fetch(fullUrl, options);
              if (!r.ok) {
-                 let errorMsg = `Request failed with status: ${r.status}`; // Use original phrasing slightly adapted
-                 let errorData = null;
-                 try {
-                     errorData = await r.json();
-                     errorMsg = errorData.message || errorMsg;
-                 } catch (e) { /* Ignore if response body is not JSON */ }
-                 console.error(`API Fail: ${r.status} ${r.statusText} @ ${fullUrl}`, errorData); // Log fullUrl (from template)
-                 // <<< NO specific 401 redirect needed here based on original welcome.html code >>>
-                 throw new Error(errorMsg); // Throw the constructed error message
+                 let m = `API Error (${r.status})`; let d=null;
+                 try { d=await r.json(); m=d.message||m;} catch (e) {}
+                 console.error(`API Fail: ${r.status} ${r.statusText} @ ${fullUrl}`, d);
+                 // Let the caller handle specific status codes if needed
+                 throw new Error(m || `Request failed: ${r.status}`);
              }
-
-             // Check content type before trying to parse JSON
              const ct = r.headers.get("content-type");
-             if (ct?.includes("application/json")) {
-                 const d = await r.json();
-                 console.debug(`API OK JSON @ ${fullUrl}:`, d); // Log fullUrl (from template)
-                 return d;
-             } else {
-                 // Handle non-JSON success responses as original did
-                 console.debug(`API OK NoJSON @ ${fullUrl} (${r.status})`); // Log fullUrl (from template)
-                 return {}; // Return empty object like original
-             }
-         } catch (e) { // Error handling
-              console.error(`API Excep (${fullUrl}):`, e); // <--- Ensure this uses fullUrl (from template)
-              // Check for network errors (from template)
-              if (e.message.toLowerCase().includes('failed to fetch')) {
-                  // Consider a more user-friendly message for network errors on welcome page
-                  throw new Error("Network error. Please check connection and try again.");
-              }
-              // Re-throw other errors (like original and template)
-              throw e;
+             if (ct?.includes("application/json")) { const d = await r.json(); console.debug(`API OK JSON @ ${fullUrl}:`, d); return d; }
+             else { console.debug(`API OK NoJSON @ ${fullUrl} (${r.status})`); return {}; }
+         } catch (e) {
+              console.error(`API Excep (${fullUrl}):`, e);
+              if (e.message.toLowerCase().includes('failed to fetch')) throw new Error("Network error.");
+              throw e; // Re-throw other errors
          }
     }
+     function updateUiPostSignIn(redirectUrl, message) {
+         // Keep this function as it was
+         if (loginPrompt) loginPrompt.style.display = 'none';
+         if (googleButtonWrapper) googleButtonWrapper.style.display = 'none';
+         if (authErrorMessage) authErrorMessage.style.display = 'none';
+         if (continueSection && successPrompt && continueButton) {
+             successPrompt.innerHTML = `<i class="fas fa-check-circle" style="color: var(--success-color); margin-right: 8px;"></i> ${message}`;
+             continueButton.textContent = 'Continue';
+             continueButton.style.display = 'inline-flex';
+             continueButton.onclick = function() { window.location.href = redirectUrl; };
+             continueSection.style.display = 'block';
+         } else { console.error("UI elements for post-sign-in not found."); }
+     }
 
-
-    /**
-     * Handles the response from Google Sign-In.
-     */
+    // --- Google Sign-In Handler (Simplified Error Handling) ---
     async function handleGoogleSignInResponse(response) {
       console.log("Google Sign-In Response Received.");
       clearAuthError();
-
       const token = response.credential;
-      if (!token) {
-          showAuthError("Failed to get credential from Google. Please try again.");
-          return;
-      }
+      if (!token) { showAuthError("Google credential missing."); return; }
 
-      console.log("Sending token to backend for verification...");
-
+      console.log("Step 1: Verifying token with backend...");
       try {
-         // 1. Verify token with backend (creates session)
-         // Use the updated apiRequest
-         await apiRequest('/api/auth/google', {
+         const authResult = await apiRequest('/api/auth/google', {
            method: 'POST',
            headers: { 'Content-Type': 'application/json' },
            body: JSON.stringify({ token: token })
          });
-         console.log("Backend verification successful.");
+         // If apiRequest throws an error (non-OK status), it will be caught below
+         console.log("Backend verification successful:", authResult);
 
-         // 2. Check user's setup progress
-         // Use the updated apiRequest
+         // If verification succeeded (didn't throw), proceed immediately to status check
+         console.log("Step 2: Checking user status...");
          const status = await apiRequest('/api/user/status', { method: 'GET' });
+         // If status fails (e.g., 401 because cookie wasn't set/sent), it throws and goes to catch
+
          console.log("User status received:", status);
 
-         // 3. Determine next step and update UI
-         // Example: Backend returns { setupComplete: { about: true, learningStyle: false, ... }, hasBooking: false }
-         let nextUrl = 'aboutyourself.html'; // Default next step
-         let message = 'You have successfully signed in. Complete your profile to continue.';
-
+         // Determine next step ONLY if status was successful
+         let nextUrl = 'aboutyourself.html';
+         let message = 'Sign-in successful. Please continue setup.';
          if (status.hasBooking) {
-             // User already has a booking, maybe redirect to profile or lessons
-             nextUrl = 'profile.html'; // Or lessons.html
-             message = 'Welcome back! View your booked lesson.';
+             nextUrl = 'profile.html'; message = 'Welcome back! View your lesson.';
          } else if (status.setupComplete?.about && status.setupComplete?.learningStyle && status.setupComplete?.proficiency) {
-             // All setup steps done, ready to book
-             nextUrl = 'booking.html';
-             message = 'Welcome back! You are ready to book your free session.';
+             nextUrl = 'booking.html'; message = 'Welcome back! Ready to book.';
          } else if (status.setupComplete?.about && status.setupComplete?.learningStyle) {
-              nextUrl = 'languageproficiency.html';
-              message = 'Great! Just a few more details about your proficiency.';
+              nextUrl = 'languageproficiency.html'; message = 'Great! Next: proficiency.';
          } else if (status.setupComplete?.about) {
-             nextUrl = 'learningstyle.html';
-             message = 'Welcome! Let\'s find your preferred learning style.';
+             nextUrl = 'learningstyle.html'; message = 'Welcome! Next: learning style.';
          }
-         // else: default is aboutyourself.html
-
          updateUiPostSignIn(nextUrl, message);
 
       } catch (error) {
-          showAuthError(`Sign-in failed: ${error.message}. Please try again.`);
+          // This will catch errors from EITHER apiRequest('/api/auth/google') OR apiRequest('/api/user/status')
+          console.error("Error during sign-in flow:", error);
+          // Provide a generic but clear error based on the likely failure point
+          if (error.message.includes('401') || error.message.includes('authenticated')) {
+               showAuthError(`Authentication failed. Please ensure cookies are enabled and try again.`);
+          } else if (error.message.includes('Network error')) {
+               showAuthError('Network error. Please check your connection and try again.');
+          }
+          else {
+              showAuthError(`Sign-in failed: ${error.message}.`);
+          }
       }
     }
 
-    /**
-     * Updates the UI after successful sign-in and status check.
-     */
-    function updateUiPostSignIn(redirectUrl, message) {
-      if (loginPrompt) loginPrompt.style.display = 'none';
-      if (googleButtonWrapper) googleButtonWrapper.style.display = 'none';
-      if (authErrorMessage) authErrorMessage.style.display = 'none';
-
-      if (continueSection && successPrompt && continueButton) {
-        successPrompt.innerHTML = `<i class="fas fa-check-circle" style="color: var(--success-color); margin-right: 8px;"></i> ${message}`;
-        continueButton.textContent = 'Continue'; // Reset text
-         continueButton.style.display = 'inline-flex';
-
-        // Set the correct redirection target
-        continueButton.onclick = function() {
-          console.log(`Continue button clicked. Redirecting to ${redirectUrl}...`);
-          window.location.href = redirectUrl;
-        };
-
-        continueSection.style.display = 'block';
-      } else {
-          console.error("Could not find elements needed for post-sign-in UI update.");
-      }
-    }
-
-    // Add a DOMContentLoaded listener to potentially check if user is *already* logged in
-    // when they visit the page (e.g., session cookie exists).
-    document.addEventListener('DOMContentLoaded', async () => {
-        console.log("Welcome page loaded. Checking initial auth status...");
-        try {
-            // Use the updated apiRequest
-            const status = await apiRequest('/api/user/status', { method: 'GET' });
-            // If the request succeeds, the user is already logged in (valid session)
-            console.log("User is already logged in. Status:", status);
-
-            // Determine next step based on status (same logic as in handleGoogleSignInResponse)
-            let nextUrl = 'aboutyourself.html';
-            let message = 'Welcome back! Continue your setup.';
-
-            if (status.hasBooking) {
-                nextUrl = 'profile.html'; // Or lessons.html
-                message = 'Welcome back! View your booked lesson.';
-            } else if (status.setupComplete?.about && status.setupComplete?.learningStyle && status.setupComplete?.proficiency) {
-                nextUrl = 'booking.html';
-                message = 'Welcome back! You are ready to book your free session.';
-             } else if (status.setupComplete?.about && status.setupComplete?.learningStyle) {
-                nextUrl = 'languageproficiency.html';
-                message = 'Great! Just a few more details about your proficiency.';
-            } else if (status.setupComplete?.about) {
-                nextUrl = 'learningstyle.html';
-                message = 'Welcome back! Let\'s find your preferred learning style.';
-            }
-
-            updateUiPostSignIn(nextUrl, message); // Show continue button immediately
-
-        } catch (error) {
-            // If the status request fails (e.g., 401 Unauthorized, or other errors like network), the user is not logged in.
-            // No UI change needed, the Google Sign-In button should remain visible.
-             // Log the specific error for debugging, but don't show it to the user unless needed
-             console.log("Initial auth status check failed (User likely not logged in):", error.message);
-        }
-    });
+    // --- Remove DOMContentLoaded Status Check for now ---
+    // document.addEventListener('DOMContentLoaded', async () => {
+    //     console.log("Welcome page loaded. Skipping initial auth status check for debugging.");
+    // });
 
   </script>
 </body>
